contrast fix

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -87,6 +87,7 @@ nav {
     list-style: none;
     padding: 0;
     margin: 0;
+    background-color: var(--text-background);
 }
 
 .navigation li {
